<resources>
    <string name="app_name">MySubmissionOne</string>
    <string name="image_movie">Image Movie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="detail_image">Detail Image</string>
    <string name="detail">Detail</string>
    <string name="overview">Overview</string>
    <string name="featured_crew">Featured Crew</string>

    <string-array name="items_title">
        <item>Avengers: Infinity War</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Solo: A Star Wars Story</item>
        <item>Black Panther</item>
        <item>Venom</item>
        <item>Ant-Man and the Wasp</item>
        <item>Bohemian Rhapsody</item>
        <item>Incredibles 2</item>
        <item>Robin Hood</item>
        <item>To All the Boys</item>
    </string-array>

    <string-array name="items_desc">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy…</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spiderman. When Wilson Kingpin Fisk uses a super collider, others from across the SpiderVerse are transported to this dimension.</item>
        <item>Through a series of daring escapades deep within a dark and dangerous criminal underworld, Han Solo meets his mighty future copilot Chewbacca and encounters the notorious gambler Lando Calrissian.</item>
        <item>King TChalla returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his countrys new leader. However, TChalla soon finds that he is challenged for the throne…</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect…</item>
        <item>Just when his time under house arrest is about to end, Scott Lang once again puts his freedom at risk to help Hope van Dyne and Dr. Hank Pym dive into the quantum realm and try to accomplish, against time and any…</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock and roll band Queen in 1970. Hit songs become instant classics.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock and roll band Queen in 1970. Hit songs become instant classics.</item>
        <item>A war hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Lara Jeans love life goes from imaginary to out of control when her secret letters to every boy shes ever fallen for are mysteriously mailed out.</item>
    </string-array>

    <array name="items_image">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_black_panther</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_ant_man</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_incredible</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_to_all_the_boys</item>
    </array>
</resources>
